# testWiFi

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: build_config.h.96602D019EEC5F98.idx  includes.h.A1A5A1B30254E1F1.idx  main.cpp.922223A36E86CD1A.idx  wpa_ctrl.c.554958D2DF45587A.idx  wpa_ctrl.h.D3568C74DB1B0BEC.idx
